@@ -653,7 +653,8 @@ for my $list (@LISTFILES) {
 
         next unless defined $action;
 
-        if (not (defined($item) and defined($replacement))) {
+        if (not (defined($item) and defined($replacement) and
+                 $item ne '' and $replacement ne '')) {
             warn "Can't parse '$_', skipping...";
             next;
         }
